# practice-tools

./: .env.example  .gitignore  .htaccess  README.md  dispatch.fcgi  passenger_wsgi.py  pyproject.toml  scale_ordering.py  schema.sql
.claude/: CLAUDE.md  vanilla-js-guidelines.md
app/: __init__.py
app/speed_standards/: __init__.py  db.py  routes.py
app/strategy_cards/: __init__.py  db.py  routes.py
cards/: cards_import.html  cards_import.txt  import_from_notes
experiment/: 2d6-scale-gen.md  scale_ordering.py  speed_up_standards.ipynb  test_alpha_range.py
guidelines/: accidental-choice.md
public/: index.html  styles.css
public/2d6-scale/: accidentals.js  index.html  octave-optimization.js  rhythm-generator.js  scale-generator.js  utils.js
public/speed-standards/: index.html  song-selector.js
public/strategy-cards/: index.html  strategy-cards.js
test/: accidentals.test.js  octave-optimization.test.js
